--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "pillow>=10.0.0",
     "ultralytics>=8.0.0",
     "pyyaml>=6.0",
+    "mss>=9.0.0",
+    "pywin32>=306",
 ]
 
 [tool.uv]
